--- a/our_work/content-alt-ed.html
+++ b/our_work/content-alt-ed.html
@@ -12,6 +12,12 @@
 <h1 class="content-text-header">Publications</h1>
 
 <ul>
+
+
+<li>Raising the Bar, Building Capacity: Driving Improvement in California's Continuation High Schools  (<a href="/resources/reports/Berkeley001_Phase2_CHS_6A_REPORT.pdf"class="link-no-underline">Report</a> | <a href="/resources/reports/Berkeley004 Raising the bar4 Executive Summary.pdf" class="link-no-underline"> Executive Summary</a>)</li>
+
+
+
 <li>Building Effective Learning Environments in California's Continuation High Schools (<a href="/resources/publications/Bush_Alt Ed_Learning_Environment final 2-2012.pdf"class="link-no-underline">Issue Brief</a>)</li>
 <li>PLUS: San Jose's Successful Alternative Education Option (<a href="/resources/publications/JGC_IB_PLUSSanJoseAltEd2011.pdf"class="link-no-underline">Issue Brief</a>)</li>
 
