--- a/our_work/content-playworks.html
+++ b/our_work/content-playworks.html
@@ -11,7 +11,7 @@
 
       <h1 class="content-text-header">Partner Organizations</h1>
 <ul>
-<li>PlayWorks</li>
+<li>Playworks</li>
 <li>Mathematica Policy Research</li>
 </ul>
     <br>
@@ -25,12 +25,12 @@
 
 <li>Playworks: Supporting Play and Physical Activity in Low-Income Elementary Schools (<a href="http://www.rwjf.org/files/research/4632.63651.playandphysicalactivity.pdf">Report)</a></li>
 
-<li>PlayWorks: Early Playworks Implementation in Six Bay Area Elementary Schools (<a href="/resources/reports/4632.63651.report.pdf">Report)</a></li>
+<li>Playworks: Early Playworks Implementation in Six Bay Area Elementary Schools (<a href="/resources/reports/4632.63651.report.pdf">Report)</a></li>
 
 
-<li>PlayWorks: Supporting Positive School Climate in Low-Income Elementary Schools (<a href="/resources/reports/4632.63651.schoolclimate.pdf">Report)</a></li>
+<li>Playworks: Supporting Positive School Climate in Low-Income Elementary Schools (<a href="/resources/reports/4632.63651.schoolclimate.pdf">Report)</a></li>
 
-<li>PlayWorks: Promoting Positive Youth Development in Low-Income Elementary Schools (<a href="/resources/reports/4632.63651.youthdevelopment.pdf">Report)</a></li>
+<li>Playworks: Promoting Positive Youth Development in Low-Income Elementary Schools (<a href="/resources/reports/4632.63651.youthdevelopment.pdf">Report)</a></li>
 
 <li>Child's Play: Why increasing opportunities to play and be active may improve students' academic and physical outcomes (<a href="/resources/lit-review/Lit-Review_PlayWorks_091027.pdf">Lit Review</a>)</li>
 </ul>
