--- a/partners/content-national.html
+++ b/partners/content-national.html
@@ -72,7 +72,7 @@
 </ul>
 <br>
 
-<a class="header-link" href=" http://www.playworks.org/" target="_blank">PlayWorks</a><br>
+<a class="header-link" href=" http://www.playworks.org/" target="_blank">Playworks</a><br>
 <p>Playworks supports play at hundreds of schools across the country, helping to transform recess into a tool to support learning. Our coaches become part of the school family, getting to know the students and staff and helping to make the playground a virtual classroom where students learn teamwork, conflict resolution, creative problem solving and other life lessons that stretch beyond traditional classroom activities. The result is a stronger learning community and a more positive educational environment.</p>
 <br>
 <ul>
