fixes prior to release

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ document.createElement("article" );
 				<div class="feature_text">
 					&nbsp;<br>
 					<ul class="pdf">
-<li><a class="link-homepage-feature" href="/resources/reports/Berkeley001_Phase2_CHS_6A_REPORT.pdf"> Raising the Bar, Building Capacity: Driving Improvement in California’s Continuation High Schools </a></li>
+<li><a class="link-homepage-feature" href="/resources/reports/Berkeley001_Phase2_CHS_6A_REPORT.pdf">Driving Improvement in California’s Continuation High Schools </a></li>
 <li><a class="link-homepage-feature" href="/resources/publications/Absence_IB_final.pdf" class="link-no-underline">Truancy and Chronic Absence in Redwood City</a></li>
 <li><a class="link-homepage-feature" href="http://www.rwjf.org/vulnerablepopulations/product.jsp?id=74194">Strengthening Recess Transforms the School Climate</a></li>						
 						
