--- a/resources/content-reports.html
+++ b/resources/content-reports.html
@@ -16,18 +16,18 @@
 <a href="/resources/reports/ECE Linkages Interim Report Summer 2011.Final.pdf">Early Childhood and Community Schools Linkages Project, Interim Report, August 2011</a><br>
 <br>
 
-<a href="/resources/reports/4632.63651.youthdevelopment.pdf">PlayWorks: Promoting Positive Youth Development in Low-Income Elementary Schools, January 2011</a><br>
+<a href="/resources/reports/4632.63651.youthdevelopment.pdf">Playworks: Promoting Positive Youth Development in Low-Income Elementary Schools, January 2011</a><br>
 <br>
 
 <a href="/resources/reports/4632.63651.playandphysicalactivity.pdf">Playworks: Supporting Play and Physical Activity in Low-Income Elementary SchoolsReport, January 2011</a><br>
 <br>
-<a href="/resources/reports/4632.63651.schoolclimate.pdf">PlayWorks: Supporting Positive School Climate in Low-Income Elementary Schools, January 2011</a><br>
+<a href="/resources/reports/4632.63651.schoolclimate.pdf">Playworks: Supporting Positive School Climate in Low-Income Elementary Schools, January 2011</a><br>
 <br>
 
 <a href="/resources/reports/4632.63651.finalreport.pdf">Playworks Implementation in Eight Bay Area Elementary Schools, December 2010 </a><br>
 <br>
 
-<a href="/resources/reports/4632.63651.report.pdf">PlayWorks: Early Playworks Implementation in Six Bay Area Elementary Schools, June 2010</a><br>
+<a href="/resources/reports/4632.63651.report.pdf">Playworks: Early Playworks Implementation in Six Bay Area Elementary Schools, June 2010</a><br>
 <br>
 
 <a href="/resources/reports/Community Counts_McLaughlin.pdf">Community Counts: How Youth Organizations Matter for Youth Development, 2000</a><br>
