--- a/index.html
+++ b/index.html
@@ -125,14 +125,16 @@ document.createElement("article" );
 				<div class="feature_text">
 					<p>
 						<ul class="news">
+					       	  <li><a class="link-homepage-feature" href="news/news.html">October 6, 2012<br>
+Standard of Excellence: How John W. Gardner Inspires a New Generation of Leadership </a></li>
+
    
 
-              <li> <a class="link-homepage-feature" href="http://www.cvent.com/events/2012-coalition-for-community-schools-national-forum/event-summary-586f6c567df044158be9c511f1f09863.aspx?lang=en&sms=2&refid=ForumForward">May 9 – 12: 2012 Community Schools National Forum</a></li>
 
 
 						</ul>
 <br><br>
-                                        <a class="link-homepage-feature-right" href="/news/news.html">More Events >></a>
+                                        <a class="link-homepage-feature" href="/news/news.html">More Events >></a>
 
 					</p>
 				</div>
