--- a/about_jgc/content-team.html
+++ b/about_jgc/content-team.html
@@ -3,8 +3,13 @@
       <div id="jgc-content-features">
         
         <div class="jgc-content-feature-item-left">
-	<h1 class="title-page-header-big">Our Team</h1>
-	<br>
+        <img class="big-top" src="/images/team/allStaff.jpg" usemap="#teammap">
+        <!--JBB-->
+        <!--<map name="teammap">
+          <area shape="rect" coords="0,0,82,126" href="team_bios/nancy.html" title="Nancy Mancini" />
+
+        </map> -->
+	<br><br><br>
 
 	  <div class="column-outer">
    	    <div class="column-inner-box">
@@ -78,12 +83,6 @@
 <p><a href="mailto:kgeiser@stanford.edu">kgeiser@stanford.edu</a></p>
           <br>
 
-  	  <a class="header-link" href="/about_jgc/team_bios/oded.html">Oded Gurantz</a>
-	  <p>Senior Policy Analyst</p>
-(650) 724-2810<br>	  
-<p><a href="mailto:ogurantz@stanford.edu">ogurantz@stanford.edu</a></p>
-          <br>
-
           <a class="header-link" href="/about_jgc/team_bios/mary.html">Mary Hofstedt</a>
 	  <p>Program Manager</p>
 (650) 736-8594<br>	 
@@ -113,13 +112,6 @@
 
 	 
 		
-	  <a class="header-link" href="/about_jgc/team_bios/angela.html">Angela Ongoco</a>
-	  <p>Project Coordinator</p>
-(201) 638-7895<br>	  
-<p><a href="mailto:aongoco@stanford.edu">aongoco@stanford.edu</a></p>
-          <br>
-	
-	  
 	  <a class="header-link" href="/about_jgc/team_bios/carmen.html">Carmen Rodr&iacute;guez</a>
 	  <p>Administrative Associate</p>
 (650) 725-3699<br>	  
