--- a/about_jgc/team_bios/content-amy.html
+++ b/about_jgc/team_bios/content-amy.html
@@ -6,7 +6,9 @@
            <h1 class="content-text-header">Amy Gerstein, Ph.D.</h1>
 <span class="content-bold">Executive Director</span><br>
 <br>
-<p>Amy Gerstein has served as Executive Director of the John W. Gardner Center
+<p>
+<img class="bio-std" src="/images/team/AmyWeb.jpg">
+Amy Gerstein has served as Executive Director of the John W. Gardner Center
 for Youth and Their Communities since August 2009. Prior to that Amy was an
 education research and policy consultant providing services to foundations,
 educational organizations and other nonprofits on issues of leadership
