--- a/about_jgc/team_bios/content-bernadette.html
+++ b/about_jgc/team_bios/content-bernadette.html
@@ -7,7 +7,7 @@
 	   <span class="content-bold">Project Coordinator</span><br>
 <br>
 <p>
-<img class="bio-std" src="/images/team/BThomas_sm.jpg">
+<img class="bio-std" src="/images/team/Bernadette.jpg">
 Bernadette Thomas Butler has been a Project Coordinator at the John W. Gardner Center since August of 2010 and comes with several years of experience working with San Francisco Bay Area youth and their families. Bernadette works principally on the Community Schools Resource Initiative, the East Palo Alto-Belle Haven Community Mapping and Youth-Led Feasibility Study, and the Complementary Indicators of Youth Development Project.
 </p>
 <br>
