--- a/about_jgc/team_bios/content-lisa.html
+++ b/about_jgc/team_bios/content-lisa.html
@@ -7,7 +7,7 @@
            <span class="content-bold">Research & Policy Analyst </span><br>
 	   <br>
 <p>
-<img class="bio-std" src="/images/team/LWestrich.gif">
+<img class="bio-std" src="/images/team/Lisa.jpg">
 Lisa Westrich joined the staff of the John W. Gardner Center for Youth and Their Communities in November 2009. Prior to that, Lisa worked for three years as a Research and Evaluation Consultant providing services to educational organizations and other nonprofits on issues related to school reform, program implementation, and organizational development. Before working as a consultant, Lisa was a member of the Adolescent Heath Van team at Lucile Packard Children's Hospital at Stanford University, where she provided advocacy and mental health services to homeless and uninsured teens. 
 </p>
 <br>
