--- a/about_jgc/team_bios/content-maria.html
+++ b/about_jgc/team_bios/content-maria.html
@@ -7,7 +7,7 @@
 <span class="content-bold">Policy and Program Senior Manager</span><br>
 <br>
 <p>
-<img class="bio-std" src="/images/team/MFernandez_sm.jpg">
+<img class="bio-std" src="/images/team/Maria_pic.jpg">
 María joined the JGC in the fall of 2000 as co-founder and Director of our Youth Engaged in Leadership and Learning Project (YELL) in Redwood City for two years. In 2003, she co-managed the development and implementation of a 3-year community schools development initiative with five schools in two San Mateo County school districts. Currently, María serves as the lead staffer for the Community Youth Development Initiative (CYDI) - community-wide youth development initiative in Redwood City and North Fair Oaks created in partnership with the Redwood City 2020 collaborative. Before arriving at the JGC, María served as a Community Developer with the Redwood City Family Centers at Hoover School and prior to that, was involved with various Stanford-affiliated youth and education programs. A graduate of Stanford and Harvard Universities, María has lived in San Mateo County for the past 12 years. In her spare time, she provides facilitation, community building, and interpretation services to Bay Area community groups. She has served on the former Peninsula Community Foundation's FAITHS initiative advisory board as well as the Board of Directors for Samaritan House, a social service agency for children, families and residents in San Mateo County for 5 years. María is currently a Commissioner on the San Mateo County Commission on the Status of Women. 
 </p>
          </div>
