--- a/about_jgc/team_bios/content-mary.html
+++ b/about_jgc/team_bios/content-mary.html
@@ -6,7 +6,9 @@
           <h1 class="content-text-header">Mary Hofstedt, Ed.M.</h1>
 <span class="content-bold">Program Manager</span><br>
 <br>
-<p>Mary Hofstedt is a Youth Development Program and Policy
+<p>
+<img class="bio-std" src="/images/team/Mary.jpg">
+Mary Hofstedt is a Youth Development Program and Policy
 Specialist at JGC. Mary directed the Youth Engaged in
 Leadership and Learning (YELL) program in Redwood City
 from 2003 to 2006, and has trained program staff,
