--- a/about_jgc/team_bios/content-milbrey.html
+++ b/about_jgc/team_bios/content-milbrey.html
@@ -8,7 +8,7 @@
 <span class="content-italic">David Jacks Professor of Education and Public Policy, Stanford University</span><br>
 <br>
 <p>
-<img class="bio-std" src="/images/team/milbrey.jpg">
+<img class="bio-std" src="/images/team/Milbrey.jpg">
 Milbrey McLaughlin is the Founding Director of the John W. Gardner Center for
 Youth and Their Communities at Stanford University. She is also the Co-Director of
 the Center for Research on the Context of Teaching, an interdisciplinary research
