--- a/about_jgc/team_bios/content-monika.html
+++ b/about_jgc/team_bios/content-monika.html
@@ -7,7 +7,7 @@
            <span class="content-bold">Policy Analyst</span><br>
 	   <br>
 	  <p>
-          <img class="bio-std" src="/images/team/MSanchez.gif">
+          <img class="bio-std" src="/images/team/Monika.jpg">
           Monika Sanchez is a Policy Analyst for the Youth Data Archive initiative at the John W. Gardner Center. Prior to joining the JGC, Monika was a Research Analyst at the metropolitan planning organization, SANDAG, where she provided research and analytical support for the agency's economic services arm, including fiscal and economic impact assessments, demographic data and industry cluster analysis, and community housing plans and programs evaluation. She has extensive experience working with data for public policy and planning purposes, as well as expertise coordinating efforts involving government agencies, community partners, and the public. Monika received an M.Sc. in Population Studies and Development from the London School of Economics and Political Science and a B.A. in Economics from the University of California, San Diego. 
           </p>
 
