--- a/about_jgc/team_bios/content-sebastian.html
+++ b/about_jgc/team_bios/content-sebastian.html
@@ -6,7 +6,9 @@
    <h1 class="content-text-header">Sebastian Castrechini</h1>
 <span class="content-bold">Senior Policy Analyst</span><br>
 <br>
-<p>Sebastian Castrechini has experience from a variety of roles related to
+<p>
+<img class="bio-std" src="/images/team/Sebastian.jpg">
+Sebastian Castrechini has experience from a variety of roles related to
 education. He has worked as a practitioner, teaching high school social
 studies in the Baltimore City Public Schools and serving as assistant
 principal at Excel Charter Academy in Los Angeles. Sebastian has also
