updated Manuelito email

--- a/about_jgc/content-team.html
+++ b/about_jgc/content-team.html
@@ -43,7 +43,7 @@
 	  <a class="header-link" href="/about_jgc/team_bios/manuelito.html">Manuelito Biag</a>
 	  <p>Social Science Research Associate</p>
 (650) 724-2810<br>	  
-<p><a href="mailto:mbiag@stanford.edu">mbiag@stanford.edu</a></p>
+<p><a href="mailto:mdbiag@stanford.edu">mdbiag@stanford.edu</a></p>
           <br>
 
 	  <a class="header-link" href="/about_jgc/team_bios/graciela.html">Graciela Borsato</a>
