Monika and Nancy edits

--- a/our_work/content-capacity_building.html
+++ b/our_work/content-capacity_building.html
@@ -53,11 +53,12 @@
 <h1 class="content-text-header">Capacity Building</h1>
 
 
-<p>JGC works with partners to develop and expand their skills and knowledge about researchable questions, data collection and interpretation, and valid and reliable indicators of positive youth development that will result in actionable findings to improve outcomes for youth.    The JGC builds capacity  through ongoing partnerships and projects that: </p>
+<p>
+JGC works with partners to develop and expand their skills and knowledge about researchable questions, data collection and interpretation, and valid and reliable indicators of positive youth development that will result in actionable findings to improve outcomes for youth. The JGC builds capacity through ongoing partnerships that inquire deeply into "what works for youth" in and across settings and systems, and projects that:
+</p>
 <br>
 <ol> 
 <li>Use data to drive action. (<a href="/our_work/yda.html">Youth Data Archive</a>, <a href="/our_work/cris.html">College Readiness Indicator Systems</a>)</li>
-<li>Inquire deeply into “what works for youth” in and across settings and systems (Implementation Research)</li>
 <li>Embed youth development as a city-wide approach to create thriving environments for youth (<a href="/our_work/cydi.html">CYDI</a>)</li>
 <li>Facilitate the creation of shared frameworks to guide planning, decision making, and ongoing capacity building (<a href="/our_work/cydi.html">CYDI</a>, <a href="/our_work/csri.html">Community School Resource Initiative</a>) </li>
 </ol>
