--- a/our_work/content-youth_art_music.html
+++ b/our_work/content-youth_art_music.html
@@ -3,8 +3,7 @@
       <div id="jgc-content-features">
 
         <div class="jgc-content-feature-item-left">
-           <h1 class="title-page-header-big">East Palo Alto
-Arts, Music and Cultural Center: Community Assessment and Engagement </h1>
+           <h1 class="title-page-header-big">East Palo Alto Arts and Music and Center: Youth Development and Community Engagement</h1>
 
   <aside>
     <div class="right-side-box">
@@ -13,22 +12,23 @@ Arts, Music and Cultural Center: Community Assessment and Engagement </h1>
 <ul>
 <li>Live in Peace</li>
 <li>The Mural Music and Art Project</li>
+<li>Youth United for Community Action</li>
+<li>The John and Marcia Goldman Foundation</li>
 </ul>
     
-    </div> <!--end right side box div-->
-    </aside>
+  </div> <!--end right side box div-->
+  </aside>
 
 
-
-
-<p>Since 2010, a group of youth and adult community members from East Palo Alto have worked with the John W. Gardner Center (JGC) and an anonymous funder to determine if people in East Palo Alto want and need a community-based Arts, Music and Cultural Center. Staff and members of local organizations including Live in Peace (LIP), the Mural Music & Arts Project (MMAP), and Youth United for Community Action (YUCA) serve as core planning team members. Youth leaders from the team have conducted two rounds of data collection and community engagement for the purpose of learning about local interests, needs, potential locations, and political and socialwill for the project.</p>
+<p>
+<br>
+Since 2010, a group of youth and adult community members from East Palo Alto haveworked with the John W. Gardner Center (JGC) to determine if people in East Palo Alto want and need a community-based Arts and Music Center. Staff and members of local organizations including Live in Peace (LIP), the Mural Music & Arts Project (MMAP), and Youth United for Community Action (YUCA) serve as core planning team members. Youth have conducted two rounds of data collection and community engagement for the purpose of learning about localinterests, needs, potential locations, and political and social will for the project.
+</p>
 
 <br>
 
-<p>Please send questions or ideas to <a href="mailto: epacenter.project@gmail.com ">
+<p>Please send questions or comments to <a href="mailto: hofstedt@stanford.edu ">
+hofstedt@stanford.edu</a> </p>  
 
-epacenter.project@gmail.com</a> </p>         </div>
-
-     
-
-       </div>
+    </div>
+  </div>
