--- a/about_jgc/content-jobs.html
+++ b/about_jgc/content-jobs.html
@@ -6,10 +6,10 @@
         <h1 class="title-page-header-big">Jobs, Internships, and Volunteer Opportunities</h1>
 <br>
 <h1 class="content-text-header">Job Openings</h1><br>
-<ul>
-<li><a href="/about_jgc/Project Coordinator.pdf"><span class="content-bold">Project Coordinator</span></a> (Job ID: 47411)<br>
-Apply through <a href="http://jobs.stanford.edu/">http://jobs.stanford.edu/</a></li>
-</ul>
+<br>
+<p>
+There are no staff openings at this time. Please check back later.
+</p>
 <br>
 <br>
 
