Nina in Maria out - Leslies first work

--- a/our_work/content-absence.html
+++ b/our_work/content-absence.html
@@ -25,6 +25,8 @@
 <h1 class="content-text-header">Publications</h1>
 <ul>
 
+<li>Curbing Chronic Absence (<a href="http://www.csba.org/%7E/link.aspx?_id=725D631AF1B34AC8BE3E93DCF9C875B5&_z=z">Webinar</a>)</li>
+
 <li>Truancy and Chronic Absence in Redwood City (<a href="/resources/publications/Absence_IB_final.pdf">Issue Brief</a>)</li>
 
 <li>Chronic Absence in Redwood City, California Schools (<a href="/resources/publications/Absence_Snapshot_final.pdf">Snapshot</a>)</li>
