--- a/about_jgc/content-team.html
+++ b/about_jgc/content-team.html
@@ -76,11 +76,10 @@
 <p><a href="mailto:larissa.collins@stanford.edu">larissa.collins@stanford.edu</a></p>
           <br>
 
-	 
-          <a class="header-link" href="/about_jgc/team_bios/maria.html">Mar&iacute;a Fern&aacute;ndez</a>
-	  <p>Policy and Program Senior Manager</p>
-(650) 736-2015<br>	  
-<p><a href="mailto:mafernandez@stanford.edu">mafernandez@stanford.edu</a></p>
+ <a class="header-link" href="/about_jgc/team_bios/nina.html">Nina Duong</a>
+	  <p>Project Coordinator</p>
+(650) 498-4889<br>	  
+<p><a href="mailto:nduong@stanford.edu">nduong@stanford.edu</a></p>
           <br>
 
 	  <a class="header-link" href="/about_jgc/team_bios/kristin.html">Kristin Geiser</a>
