donate button fix

--- a/content-donate.html
+++ b/content-donate.html
@@ -10,7 +10,7 @@
 			<p>You can donate to the Gardner Center in one of the following ways: </p><br>
                         
           <ul class="arrow">
-            <li>Donating with your credit card through Stanford University's <strong>secured</strong> donation website at <strong><a href="https://pgnet22.stanford.edu/give/home?pgnTPC=75&amp;olc=06416&amp;stp=1&amp;cturl=close&amp;gdso=4&amp;pgOrg=ung" target="_blank">Giving at Stanford</a></strong>.  Follow these steps to donate with your credit card:<br />
+            <li>Donating with your credit card through Stanford University's <strong>secured</strong> donation website at <strong><a href="https://pgnet.stanford.edu/give/home?pgnTPC=75&amp;olc=06416&amp;stp=1&amp;cturl=close&amp;gdso=4&amp;pgOrg=ung" target="_blank">Giving at Stanford</a></strong>.  Follow these steps to donate with your credit card:<br />
 
             <br />
             Click on &quot;Make a Gift&quot; now;<br /><br />
