--- a/about_jgc/content-team.html
+++ b/about_jgc/content-team.html
@@ -52,12 +52,6 @@
 <p><a href="mailto:gborsato@stanford.edu">gborsato@stanford.edu</a></p>
           <br>
 
-	  <a class="header-link" href="/about_jgc/team_bios/bernadette.html">Bernadette Butler</a>
-	  <p>Project Coordinator</p>
-(650) 498-4889<br>	  
-<p><a href="mailto:btbutler@stanford.edu">btbutler@stanford.edu</a></p>
-          <br>
-
           <a class="header-link" href="/about_jgc/team_bios/sebastian.html">Sebastian Castrechini</a>
 	  <p>Senior Policy Analyst</p>
 (650) 721-1633<br>
@@ -115,7 +109,13 @@
 	  <p><a href="mailto:nmancini@stanford.edu">nmancini@stanford.edu</a></p>
           <br>
 
-	 
+	 </div>
+   	    <div class="column-inner-box">
+
+ 		<a class="header-link" href="/about_jgc/team_bios/leslie.html">Leslie Patron</a>
+	  <p>Project Coordinator</p>
+	  <p><a href="mailto:lpatron@stanford.edu">lpatron@stanford.edu</a></p>
+          <br>
 		
 	  <a class="header-link" href="/about_jgc/team_bios/carmen.html">Carmen Rodr&iacute;guez</a>
 	  <p>Administrative Associate</p>
@@ -151,12 +151,6 @@
 	  <p>Policy, Organization, Leadership Studies Intern</p>
 	  <p><a href="mailto:dkosberg@stanford.edu">dkosberg@stanford.edu</a></p>
           <br>
-
-	  <a class="header-link" href="/about_jgc/team_bios/lambrina.html">Lambrina Mileva</a>
-	  <p>Graduate Research Assistant</p>
-	  <p><a href="mailto:mileva@stanford.edu">mileva@stanford.edu</a></p>
-          <br>
-
 	
   	  <a class="header-link" href="/about_jgc/team_bios/brandy.html">Brandy Quinn</a>
 	  <p>Graduate Research Assistant</p>
