Leslie news article addition

--- a/index.html
+++ b/index.html
@@ -109,10 +109,12 @@ document.createElement("article" );
 				<div class="feature_text">
 					<p>
 						&nbsp;<br>
-						Redwood City 2020’s Immigrant Youth Action Team (IYAT) increases support for immigrant youth.
+                                                <a class="link-homepage-feature" href="/news/okf.html">
+						JGC Partner Oakland Kids First Receives $25,000 Grant from Stanford Undergraduates
+                                                </a>	
 					</p>
 					<p>
-					<a class="link-homepage-feature" href="/partners/cydi-learn-more.html">Learn More >></a>	
+					<a class="link-homepage-feature" href="/news/okf.html">Learn More >></a>	
 					</p>
 				</div>
 			</div>
