--- a/about_jgc/team_bios/content-karen.html
+++ b/about_jgc/team_bios/content-karen.html
@@ -7,7 +7,7 @@
            <span class="content-bold">Senior Research Associate</span><br>
 	   <br>
 <p>
-<img class="bio-std" src="/images/team/KStrobel_sm.jpg">
+<img class="bio-std" src="/images/team/Karen.jpg">
 Karen Strobel is a Research Associate at the JGC studying youth's developmental outcomes in school and out-of-school contexts. Her work primarily draws on a social-cognitive model of motivation to study successful pathways among low-income, early adolescents. Karen's research at the JGC began with the experiences of youth involved in the YELL program in Redwood City and West Oakland. Currently, she is studying middle school students' motivational beliefs and perceptions of their classroom contexts. She is studying parallel questions in after school settings and summer learning programs locally as well as on the East Coast. 
 </p>
 <br>
