--- a/about_jgc/content-team.html
+++ b/about_jgc/content-team.html
@@ -3,7 +3,7 @@
       <div id="jgc-content-features">
         
         <div class="jgc-content-feature-item-left">
-        <img class="big-top" src="/images/team/allStaff.jpg" usemap="#teammap">
+        <img class="big-top" src="/images/team/team_pics_resized/jgcstaff_resized.jpg" usemap="#teammap">
         <!--JBB-->
         <!--<map name="teammap">
           <area shape="rect" coords="0,0,82,126" href="team_bios/nancy.html" title="Nancy Mancini" />
@@ -141,16 +141,6 @@
 <p><a href="mailto:westrich@stanford.edu">westrich@stanford.edu</a></p>
 	
 	    <hr class="short-thick-rule">
-
-	  <a class="header-link" href="/about_jgc/team_bios/rivka.html">Rivka Burstein-Stern</a>
-	  <p>Policy, Organization, Leadership Studies Intern</p>
-	  <p><a href="mailto:bursteir@stanford.edu">bursteir@stanford.edu</a></p>
-          <br>
-
-  	  <a class="header-link" href="/about_jgc/team_bios/dara.html">Dara Kosberg</a>
-	  <p>Policy, Organization, Leadership Studies Intern</p>
-	  <p><a href="mailto:dkosberg@stanford.edu">dkosberg@stanford.edu</a></p>
-          <br>
 	
   	  <a class="header-link" href="/about_jgc/team_bios/brandy.html">Brandy Quinn</a>
 	  <p>Graduate Research Assistant</p>
