--- a/about_jgc/team_bios/content-amy.html
+++ b/about_jgc/team_bios/content-amy.html
@@ -7,7 +7,7 @@
 <span class="content-bold">Executive Director</span><br>
 <br>
 <p>
-<img class="bio-std" src="/images/team/AmyWeb.jpg">
+<img class="bio-std" src="/images/team/team_pics_resized/Amy_resized.jpg">
 Amy Gerstein has served as Executive Director of the John W. Gardner Center
 for Youth and Their Communities since August 2009. Prior to that Amy was an
 education research and policy consultant providing services to foundations,
