--- a/about_jgc/team_bios/content-kara.html
+++ b/about_jgc/team_bios/content-kara.html
@@ -7,7 +7,7 @@
 <span class="content-bold">Associate Director</span><br>
 <br>
 <p>
-<img class="bio-std" src="/images/team/Kara.jpg">
+<img class="bio-std" src="/images/team/team_pics_resized/Kara_resized.jpg">
 Kara Dukakis, Associate Director, joined the staff of the Gardner Center in October, 2007. In that role, she oversees the planning and general functioning of the YDA initiative, with particular emphasis on community engagement. Prior to that, she was an independent Policy and Planning Consultant researching, writing and developing trainings in the areas of early care and education, child welfare and children's mental health. In 2006, Kara was appointed to the San Francisco First 5 Commission, for which she served as Chair for two years before completing her term in 2009.
 </p>
 <br>
