--- a/about_jgc/team_bios/content-larissa.html
+++ b/about_jgc/team_bios/content-larissa.html
@@ -8,7 +8,7 @@
 <span class="content-bold">Senior Administrative Associate</span><br>
 <br>
 <p>
-<img class="bio-std" src="/images/team/Larissa.jpg">
+<img class="bio-std" src="/images/team/team_pics_resized/Larissa_resized.jpg">
 Ms. Collins is the assistant to the Executive Director at the John W. Gardner Center for Children and Their Communities. In addition to supporting the Executive Director, she also provides support to other initiatives and programs at the JGC. Before joining the JGC in 2011, Larissa Collins worked for the William and Flora Hewlett Foundation for three years. She supported the President, and served as administrative support for Special Project grants provided by the Office of the President. Her previous work experience also includes positions at First 5 Calaveras and Planned Parenthood. Ms. Collins received her undergraduate degree in medical anthropology from UC Santa Cruz, and hopes to begin work on an M.P.H. as soon as her kids graduate.</p>
          </div>
 
