--- a/about_jgc/team_bios/content-marianne.html
+++ b/about_jgc/team_bios/content-marianne.html
@@ -7,7 +7,7 @@
 <span class="content-bold">Finance Manager</span><br>
 <br>
 <p>
-<img class="bio-std" src="/images/team/Marianne.jpg">
+<img class="bio-std" src="/images/team/team_pics_resized/Marianne_resized.jpg">
 Marianne Chatterton joined the John W. Gardner Center in August 2010. Marianne serves as the center's primary financial officer, overseeing grants, contracts, gifts, and operating funds. Prior to joining JGC, she was a contracts and grants analyst in UC Davis' Sponsored Programs Office. Marianne's professional experience includes non-profit management, education, the arts, and agriculture.
 </p>
 <br>
