--- a/about_jgc/team_bios/content-nina.html
+++ b/about_jgc/team_bios/content-nina.html
@@ -9,7 +9,7 @@
 <br>
 
 <p>
-<img class="bio-std" src="/images/team/NDuong.jpg">
+<img class="bio-std" src="/images/team/team_pics_resized/Nina_resized.jpg">
 Nina Duong is a Project Coordinator at the John W. Gardner Center. Her primary projects include the Community Schools Resource Initiative (CSRI) and the East Palo Alto Arts, Music, and Cultural Center.</p>
 <br>
 <p>Prior to joining the JGC, Nina served as a research fellow for the Stanford Prevention Research Center, working on the evaluation of an occupational health program. She has also performed a community health assessment of school gardens in the Redwood City School District. For the past four years, Nina has been a member of several Stanford-affiliated education and health-promotion programs. Her interests include early childhood development, particularly the relationship between children's health status and academic outcomes.</p>
