--- a/about_jgc/team_bios/content-sebastian.html
+++ b/about_jgc/team_bios/content-sebastian.html
@@ -7,7 +7,7 @@
 <span class="content-bold">Senior Policy Analyst</span><br>
 <br>
 <p>
-<img class="bio-std" src="/images/team/Sebastian.jpg">
+<img class="bio-std" src="/images/team/team_pics_resized/Sebastian_resized.jpg">
 Sebastian Castrechini has experience from a variety of roles related to
 education. He has worked as a practitioner, teaching high school social
 studies in the Baltimore City Public Schools and serving as assistant
