--- a/about_jgc/team_bios/content-ilana.html
+++ b/about_jgc/team_bios/content-ilana.html
@@ -7,7 +7,7 @@
 <span class="content-bold">Policy Analyst</span><br>
 <br>
 <p>
-<img class="bio-std" src="/images/team/Ilana.jpg">
+<img class="bio-std" src="/images/team/team_pics_resized/Ilana_resized.jpg">
 Ilana Horwitz is a Policy Analyst for the Youth Data Archive at JGC. Ilana has over five years of experience in education research, program evaluation and management consulting, with an expertise in devising, conducting and managing research and evaluation studies, analyzing quantitative and qualitative data and reporting findings to help organizations make information-based policy and program decisions.  </p>
 <br>
 <p> Prior to joining JGC, Ilana worked at BTW Informing Change and ICF Macro, where she managed evaluations of several education related programs, designed instruments, collected and analyzed quantitative and qualitative school, district, and state level data, conducted interviews, designed and wrote reports, and assisted with developing proposals. In addition, Ilana worked in the Emerging Markets and Department of Homeland Security sectors of Deloitte Consulting (formerly BearingPoint, Inc) and has taught in various capacities. </p>
