added video, fixed typo on arts murals page

--- a/our_work/content-youth_art_music.html
+++ b/our_work/content-youth_art_music.html
@@ -3,7 +3,7 @@
       <div id="jgc-content-features">
 
         <div class="jgc-content-feature-item-left">
-           <h1 class="title-page-header-big">East Palo Alto Arts and Music and Center: Youth Development and Community Engagement</h1>
+           <h1 class="title-page-header-big">East Palo Alto Arts and Music Center: Youth Development and Community Engagement</h1>
 
   <aside>
     <div class="right-side-box">
@@ -25,7 +25,9 @@
 Since 2010, a group of youth and adult community members from East Palo Alto haveworked with the John W. Gardner Center (JGC) to determine if people in East Palo Alto want and need a community-based Arts and Music Center. Staff and members of local organizations including Live in Peace (LIP), the Mural Music & Arts Project (MMAP), and Youth United for Community Action (YUCA) serve as core planning team members. Youth have conducted two rounds of data collection and community engagement for the purpose of learning about localinterests, needs, potential locations, and political and social will for the project.
 </p>
 
-<br>
+<br><br><br>
+<iframe src="https://docs.google.com/file/d/0B9perhWHyQbNMDU0RlV3QTgwWW8/preview?pli=1" width="640" height="385"></iframe>
+<br><br>
 
 <p>Please send questions or comments to <a href="mailto: hofstedt@stanford.edu ">
 hofstedt@stanford.edu</a> </p>  
