changes for this week, including video update

--- a/about_jgc/content-jobs.html
+++ b/about_jgc/content-jobs.html
@@ -5,16 +5,18 @@
         <div class="jgc-content-feature-item-left">
         <h1 class="title-page-header-big">Jobs, Internships, and Volunteer Opportunities</h1>
 <br>
-<h1 class="content-text-header">Job Openings</h1><br>
+<h1 class="content-text-header">Research Assistant</h1><br> 
+<p>The John W. Gardner Center for Youth and Their Communities (JGC) in the Stanford University School of Education is seeking a 50% research assistant for the 2012-13 academic year. The JGC works in deep partnership with communities to bridge the gap between research, practice, and policy by generating actionable research that seeks to inform both the community and the broader field about critical findings from our work.</p>
 <br>
-<p>
-There are no staff openings at this time. Please check back later.
+<p>The RA will contribute to several JGC projects by conducting qualitative and some quantitative research in community settings. Research areas may include a focus on postsecondary educational experiences for community college students, promotion of healthy communities, and youth development and engagement among middle and high school students. Qualitative research will include interviews and focus groups with key community stakeholders (in schools and districts, in other community organizations) working on behalf of youth; focus groups with young people or their families; analysis and synthesis of findings; writing for various audiences. Quantitative research would include analysis survey or administrative data focused on students’ school experiences and academic-related outcomes. RAs will have opportunities to present research findings to agency and community leaders, contribute to written products including those intended for community partners and academic journal articles, and be part of the JGC community of staff and student researchers.</p>
+<br>
+<p>This position is for current Stanford University School of Education doctoral students only. Qualified candidates will have experience conducting qualitative and quantitative analysis, including experience with Nvivo or other qualitative software. Proficiency with quantitative analysis software such as SAS or Stata is preferred but not required. This is a full-year RAship.</p>
+<br>
+<p>Please send a resume and cover letter to Rebecca London at: rlondon@stanford.edu.
 </p>
 <br>
 <br>
 
          </div>
-
-    
 
        </div>
