--- a/about_jgc/team_bios/content-rebecca.html
+++ b/about_jgc/team_bios/content-rebecca.html
@@ -7,7 +7,7 @@
 <span class="content-bold">Senior Researcher </span><br>
 <br>
 <p>
-<img class="bio-std" src="/images/team/team_pics_resized/Rebecca_resized.jpg">
+<img class="bio-std" src="/images/team/RLondon.jpg">
 Rebecca London, Ph.D., is a senior researcher at the John W. Gardner Center focusing on Youth Health and Wellness in Schools and Community, the Youth Data Archive, and the Study of Playworks. Throughout her career, Dr. London's research has bridged academia and policy, focusing on the policies and programs intended to serve low-income or disadvantaged families and youth. Using both qualitative and quantitative methods, Dr. London has conducted research on topics such as: physical fitness and academic achievement, secondary to postsecondary transitions, the effects of after school program participation, the digital divide for youth, the effects of welfare reform, college attendance among low-income mothers, children's living arrangements, and health insurance for low-wage workers.
 </p>
 <br>
