--- a/our_work/content-youth_art_music.html
+++ b/our_work/content-youth_art_music.html
@@ -22,11 +22,11 @@
 
 <p>
 <br>
-Since 2010, a group of youth and adult community members from East Palo Alto haveworked with the John W. Gardner Center (JGC) to determine if people in East Palo Alto want and need a community-based Arts and Music Center. Staff and members of local organizations including Live in Peace (LIP), the Mural Music & Arts Project (MMAP), and Youth United for Community Action (YUCA) serve as core planning team members. Youth have conducted two rounds of data collection and community engagement for the purpose of learning about localinterests, needs, potential locations, and political and social will for the project.
+Since 2010, a group of youth and adult community members from East Palo Alto have worked with the John W. Gardner Center (JGC) to determine if people in East Palo Alto want and need a community-based Arts and Music Center. Staff and members of local organizations including Live in Peace (LIP), the Mural Music & Arts Project (MMAP), and Youth United for Community Action (YUCA) serve as core planning team members. Youth have conducted two rounds of data collection and community engagement for the purpose of learning about local interests, needs, potential locations, and political and social will for the project.
 </p>
 
 <br><br><br>
-<iframe src="https://docs.google.com/file/d/0B9perhWHyQbNMDU0RlV3QTgwWW8/preview?pli=1" width="640" height="385"></iframe>
+<iframe src="https://docs.google.com/file/d/0B9perhWHyQbNOXd1NGxhLTJJaXc/preview" width="640" height="385"></iframe>
 <br><br>
 
 <p>Please send questions or comments to <a href="mailto: hofstedt@stanford.edu ">
