--- a/about_jgc/team_bios/content-graciela.html
+++ b/about_jgc/team_bios/content-graciela.html
@@ -7,7 +7,7 @@
 <span class="content-bold">Social Science Research Associate</span><br>
 <br>
 <p>
-
+<img class="bio-std" src="/images/team/Graciela.jpg">
 <p>Graciela Borsato joined the John W. Gardner Center in 2010 as a social science researcher. Prior to coming to the Gardner Center she held a research position at the University of California, Santa Cruz and worked as an independent evaluation consultant. Graciela’s research interests center on the unique ecological circumstances experienced by minority children (i.e., poverty and discrimination) and how these influence their development. She is particularly concerned with issues of access and equity for English language learners.</p>
 <br>
 <p>Graciela graduated with the equivalent of a Master’s degree in Computer Science from the University of Buenos Aires, Buenos Aires, Argentina. After immigrating to the United States, she completed an M.A. in Experimental Psychology at San Jose State University and received a Ph.D. in Developmental and Psychological Sciences from Stanford University.</p>
