--- a/our_work/content-pfa.html
+++ b/our_work/content-pfa.html
@@ -16,9 +16,12 @@
 <li>San Mateo County Office of Education</li>
 </ul>
 <br>
-<h1 class="content-text-header">Publication</h1>
+<h1 class="content-text-header">Publications</h1>
 <ul>
-<li>Educational Outcomes for Preschool for All Participants in Redwood City School District (<a href="/resources/publications/JGC_IB_RWCPreschool2011.pdf" class="link-no-underline">Issue Brief</a> & <a href="/resources/publications/JGC_SS_RWCPreschool2011.pdf" class="link-no-underline">Snapshot</a>)</li>
+<li>Educational Outcomes for Preschool for All Participants in Redwood City School District - Update (2012) (<a href="/resources/publications/PFA_IssueBrief2012_final.pdf" class="link-no-underline">Issue Brief</a> & <a href="/resources/publications/PFA_Snapshot2012_final.pdf" class="link-no-underline">Snapshot</a>)</li>
+</ul>
+<ul>
+<li>Educational Outcomes for Preschool for All Participants in Redwood City School District (2011) (<a href="/resources/publications/JGC_IB_RWCPreschool2011.pdf" class="link-no-underline">Issue Brief</a> & <a href="/resources/publications/JGC_SS_RWCPreschool2011.pdf" class="link-no-underline">Snapshot</a>)</li>
 </ul>
     
     </div> <!--end right side box div-->
@@ -26,12 +29,10 @@
 
 
 
-<p> At the request of partners in the Youth Data Archive (YDA), the John W. Gardner Center for Youth and Their Communities are updating an analysis done in 2010 linking data from youth who participated in the San Mateo County Office of Education (SMCOE) Preschool for All (PFA) program and enrolled in Redwood City School District (RCSD) thereafter.  The 2010 YDA report followed PFA participants through the end of kindergarten, 1st, and 2nd grade to see how closely PFA trajectories follow those of other RCSD students. The updated report will be able to strengthen the results for PFA participants in 1st and 2nd grade, and follow one cohort into 3rd grade. </p>
-
+<p> At the request of partners in the Youth Data Archive (YDA), the John W. Gardner Center for Youth and Their Communities (JGC) have conducted two analyses examining academic outcomes for San Mateo County Preschool for All (PFA) participants who went on to attend elementary school in Redwood City School District (RCSD). The 2011 study found that students who attended PFA had lower report card proficiency rates than their non-PFA peers in kindergarten, first, and second grade. However, after adjusting for students’ demographic background characteristics, PFA participants’ report card proficiency rates were similar to – and sometimes higher – than non-participants.  This is an important finding because leveling the playing field was a key goal of PFA.  The study also found that children who attended two years of PFA had higher adjusted proficiency rates in many early elementary report card subjects compared to children who did not attend PFA.
 <br>
-
-<p> The 2010 report showed that, before controlling for demographic background characteristics, PFA-enrolled students achieved Kindergarten outcomes below that of their non-PFA peers. The updated analysis will examine whether PFA-enrolled students achieve similar levels of school performance in 1st grade compared to their peers, and whether that is maintained over time. </p>
-
+<br>
+The 2012 study strengthened this work by including more students in the analysis and by examining second graders’ outcomes on standardized tests.  The updated analysis supports the 2011 findings on student report card proficiency and finds similar patterns for second graders on standardized tests. </p>
 <br>
 
 
